istio-gateway/tiger-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: tiger
spec:
  ports:
  - name: port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-pod
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: tiger
spec:
  ports:
  - name: port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat-pod
