istio-gateway/tiger-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tiger-virtual-svc
  namespace: tiger
spec:
  gateways:
  - tiger-gateway
  hosts:
  - "tigerfive.cn"
  http:
  - route:
    - destination:
        host: tomcat-svc
        port:
          number: 8080
      weight: 50
    - destination:
        host: nginx-svc
        port:
          number: 80
      weight: 50
